# splurge-vendor-sync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_UPDATE_SUMMARY.md  LICENSE  NESTED_VENDOR_IMPLEMENTATION.md  README.md  VERIFICATION_SUMMARY.md  pyproject.toml
.cursor/rules/: cli-standards.mdc  design-standards.mdc  documentation-standards.mdc  method-standards.mdc  naming-standards.mdc  project-standards.mdc  python-standards.mdc  sdlc-standards.mdc  security-standards.mdc  style-standards.mdc  testing-standards.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-lint-and-typecheck.yml  ci-os-matrix.yml  ci-quick-test.yml  ci-test.yml
docs/: README-DETAILS.md
docs/api/: API-REFERENCE.md
docs/cli/: CLI-REFERENCE.md
docs/notes/: note-documentation-complete-2025-11-02.md  note-documentation-updates-nested-scanning-2025-11-02.md  note-documentation-updates-scan-flag-2025-11-01.md  note-error-code-analysis-verification-2025-11-02.md  note-error-code-documentation-final-2025-11-02.md  note-error-code-documentation-updates-2025-11-02.md  note-nested-vendor-implementation-2025-11-02-1.md  note-scan-flag-implementation-2025-11-01.md
docs/plans/: plan-implementation-2025-10-28.md  plan-nested-vendor-scanning-2025-11-02-1.md
docs/research/: research-design-2025-10-28.md
splurge_vendor_sync/: __init__.py  __main__.py  cli.py  exceptions.py  main.py  sync.py  version_scanner.py
splurge_vendor_sync/_vendor/splurge_exceptions/: __init__.py  __main__.py
splurge_vendor_sync/_vendor/splurge_exceptions/core/: __init__.py  base.py
splurge_vendor_sync/_vendor/splurge_exceptions/formatting/: message.py
splurge_vendor_sync/_vendor/splurge_safe_io/: __init__.py  exceptions.py  path_validator.py  safe_text_file_reader.py  safe_text_file_writer.py
splurge_vendor_sync/_vendor/splurge_safe_io/_vendor/splurge_exceptions/: __init__.py  cli.py
splurge_vendor_sync/_vendor/splurge_safe_io/_vendor/splurge_exceptions/core/: exceptions.py
tests/integration/: test_e2e.py
tests/unit/: test_cli.py  test_main.py  test_property_based.py  test_sync.py  test_version_scanner_basic.py
