[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splurge-vendor-sync"
version = "2025.1.0"
description = "Vendor synchronization tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jim Schilling"}
]
keywords = ["vendor", "synchronization", "python", "splurge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.14.1",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.140.3",
]

[project.urls]
Homepage = "https://github.com/jim-schilling/splurge-vendor-sync"
Repository = "https://github.com/jim-schilling/splurge-vendor-sync"
Documentation = "https://github.com/jim-schilling/splurge-vendor-sync#readme"
"Bug Tracker" = "https://github.com/jim-schilling/splurge-vendor-sync/issues"

[project.scripts]
splurge-vendor-sync = "splurge_vendor_sync.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splurge_vendor_sync*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-x -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks integration tests that exercise platform-level behavior",
    "serial: marks tests that must run serially (patch global state)",
]

[tool.hypothesis]
# Hypothesis configuration for property-based testing
max_examples = 500
deadline = 5000  # 5 seconds per test
suppress_health_check = ["too_slow"]
verbosity = "normal"

[tool.coverage.run]
source = ["splurge_vendor_sync"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/_vendor/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
files = ["splurge_vendor_sync"]
show_error_codes = true
exclude = [
    "tests/.*",
    "_vendor/.*",
]
ignore_missing_imports = true
